--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,6 +1,7 @@
 
 .container {
-    width: 100vw;
+    width: 100%;
     height: 50rem;
+    z-index: 1;
     background-color: #285F5B;
 }
